@@ -6,7 +6,6 @@ import static com.mosync.internal.android.MoSyncHelpers.SYSLOG;
 import java.lang.reflect.Method;
 import java.nio.ByteBuffer;
 import java.nio.IntBuffer;
-import java.util.Arrays;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.locks.Condition;
@@ -14,16 +13,13 @@ import java.util.concurrent.locks.ReentrantLock;
 
 import java.lang.System;
 
-import java.io.File;
-import java.io.FileOutputStream;
-
 import android.app.Activity;
-import android.content.res.Configuration;
 import android.hardware.Camera;
 import android.hardware.Camera.PictureCallback;
 
 import java.lang.Thread;
 
+import android.os.Build;
 import android.util.Log;
 
 import com.mosync.internal.generated.MAAPI_consts;
@@ -50,15 +46,6 @@ public class MoSyncCameraController {
 
 	private byte[] mCallbackBuffer = null;
 	private byte[] mImageBuffer = null;
-
-
-
-	/**
-	 * Static Attributes used for reflection of some functions in the API
-	 */
-	private static Method mGetNumberofCameras;
-	private static Method mSetPreviewCallbackWithBuffer;
-	private static Camera tempCamera;
 
 	/**
 	* Stores number of availabe cameras on the device
@@ -119,8 +106,6 @@ public class MoSyncCameraController {
 
 	private boolean mSendEvent = true;
 
-	private boolean mIsUsingPreviewCallbackBuffer = false;
-
 	/**
 	 * Constructor.
 	 * @param thread The MoSync thread.
@@ -136,23 +121,44 @@ public class MoSyncCameraController {
 		userHeights = new ArrayList<Integer>();
 		mCameraParametersList = new ArrayList<Camera.Parameters>();
 		mNumCameras = numberOfCameras();
-		initilizeCameras();
+		initializeCameras();
 		rawMode = false;
 		mCurrentCameraIndex = 0;
 
 	}
 
 	/**
+	 * Open the given camera. On API levels below 9 only one
+	 * camera is available and Camera.open() is used.
+	 * @param cameraIndex
+	 * @return A Camera object.
+	 */
+	private Camera cameraOpen(int cameraIndex)
+	{
+		int apiLevel = Build.VERSION.SDK_INT;
+		if (apiLevel >= Build.VERSION_CODES.GINGERBREAD)
+		{
+		    return Camera.open(cameraIndex);
+		}
+		else
+		{
+			return Camera.open();
+		}
+	}
+
+	/**
 	* Lazy initialization of the cameras so we can use the number of cameras
 	*/
-	private void initilizeCameras()
+	private void initializeCameras()
 	{
 		try
 		{
 			mCurrentCameraIndex = 0;
+			// TODO: If mNumCameras is less than 1 we have no camera?
+			// Then does it work to open it?
 			if(mNumCameras <= 1)
 			{
-				mCamera = Camera.open();
+				mCamera = cameraOpen(0);
 				mCameraParametersList.add(mCamera.getParameters());
 			}
 			else
@@ -162,18 +168,17 @@ public class MoSyncCameraController {
 				for(int ii=0; ii < mNumCameras; ii++)
 				{
 
-					mCamera = Camera.open(ii);
+					mCamera = cameraOpen(ii);
 					mCameraParametersList.add(mCamera.getParameters());
 					mCamera.release();
 				}
-				mCamera = Camera.open(mCurrentCameraIndex);
+				mCamera = cameraOpen(mCurrentCameraIndex);
 			}
 		}
 		catch(Exception e)
 		{
 			SYSLOG("Failed to assign Cameras");
 		}
-
 	}
 
 	/**
@@ -191,44 +196,22 @@ public class MoSyncCameraController {
 	 */
 	public int numberOfCameras()
 	{
-		if(mNumCameras != 0)
+		if (mNumCameras != 0)
 		{
-			//Do not do the costly operation of reflection again
+			// Do not do the costly operation of reflection again
 			return mNumCameras;
 		}
-		 try
-		 {
-			 if(mCamera == null)
-			 {
-				 tempCamera = Camera.open();
-			 }
-			 else
-			 {
-				 mCamera.release();
-				 tempCamera = Camera.open(mCurrentCameraIndex);
-			 }
 
-			 //We have to use and static instance of the camera in the reflection here
-			 mGetNumberofCameras = tempCamera.getClass().getMethod(
-					 "getNumberOfCameras");
-			 tempCamera.release();
-			 if(mCamera != null)
-			 {
-				 mCamera = Camera.open(mCurrentCameraIndex);
-			 }
-			 return Camera.getNumberOfCameras();
-
-		 }
-		 catch (NoSuchMethodException nsme)
-		 {
-			 tempCamera.release();
-			 SYSLOG("ANDROID Version is less than 2.3!!");
-			 //before 2.3 only one camera is supported
-			 return 1;
-		 } catch (RuntimeException e) {
-			 SYSLOG("Failed to set camera Parameters");
-			 return MAAPI_consts.MA_CAMERA_RES_FAILED;
-		 }
+		int numCameras = 1;
+		try
+		{
+			numCameras = Camera.getNumberOfCameras();
+		}
+		catch (NoSuchMethodError nsme)
+		{
+			SYSLOG("ANDROID Version is less than 2.3!!");
+		}
+		return numCameras;
 	}
 
 	/**
@@ -254,8 +237,8 @@ public class MoSyncCameraController {
 	public int addSize(int index, int width, int height)
 	{
 		//TODO: move the optimal calculation here for better performance
-		userWidths.add(index, new Integer(width));
-		userHeights.add(index, new Integer(height));
+		userWidths.add(index, Integer.valueOf(width));
+		userHeights.add(index, Integer.valueOf(height));
 		return MAAPI_consts.MA_CAMERA_RES_OK;
 	}
 
@@ -265,7 +248,7 @@ public class MoSyncCameraController {
 	 */
 	public void setPreview(MoSyncCameraPreview preview)
 	{
-
+		SYSLOG("setPreview");
 		acquireCamera();
 
 		mPreview = preview;
@@ -292,11 +275,12 @@ public class MoSyncCameraController {
 			return;
 		}
 
-		try
-		{
-			//We have to use and static instance of the camera in the reflection here
-			mSetPreviewCallbackWithBuffer = mCamera.getClass().getMethod(
-			"setPreviewCallbackWithBuffer", Camera.PreviewCallback.class);
+		// try
+		// {
+			// //We have to use and static instance of the camera in the
+			// reflection here
+			// mSetPreviewCallbackWithBuffer = mCamera.getClass().getMethod(
+			// "setPreviewCallbackWithBuffer", Camera.PreviewCallback.class);
 
 			Camera.Parameters parameters = getCurrentParameters();
 			Camera.Size size = parameters.getPreviewSize();
@@ -305,19 +289,19 @@ public class MoSyncCameraController {
 
 			mCamera.addCallbackBuffer(mCallbackBuffer);
 
-			mIsUsingPreviewCallbackBuffer = true;
+		// mIsUsingPreviewCallbackBuffer = true;
 
 			mCamera.setPreviewCallbackWithBuffer(previewCallback);
 
 
 
-		}
-		catch (NoSuchMethodException nsme)
-		{
-			mIsUsingPreviewCallbackBuffer = false;
-
-			mCamera.setPreviewCallback(previewCallback);
-		}
+		// }
+		// catch (Exception nsme)
+		// {
+		// mIsUsingPreviewCallbackBuffer = false;
+		//
+		// mCamera.setPreviewCallback(previewCallback);
+		// }
 
 	}
 
@@ -342,11 +326,16 @@ public class MoSyncCameraController {
 			if(mCurrentCameraIndex != CameraNumber)
 			{
 				mCurrentCameraIndex = CameraNumber;
-				mCamera.release();
+				if (null != mCamera)
+					mCamera.release();
 				mPreview.mCamera = null;
-				mCamera = Camera.open(CameraNumber);
-				mPreview.mCameraIndex = mCurrentCameraIndex;
-				mCamera.setParameters(getCurrentParameters());
+				try {
+					mCamera = cameraOpen(CameraNumber);
+					mPreview.mCameraIndex = mCurrentCameraIndex;
+					mCamera.setParameters(getCurrentParameters());
+				} catch (Exception e) {
+					SYSLOG("cannot open camera " + e);
+				}
 			}
 
 		}
@@ -379,6 +368,7 @@ public class MoSyncCameraController {
 	 */
 	public int cameraStart()
 	{
+		SYSLOG("cameraStart");
 		acquireCamera();
 
 		try
@@ -395,7 +385,7 @@ public class MoSyncCameraController {
 		}
 		catch (Exception e)
 		{
-			SYSLOG(e.getMessage());
+			SYSLOG("cameraStart: " + e.getMessage());
 			return MAAPI_consts.MA_CAMERA_RES_FAILED;
 		}
 
@@ -410,6 +400,7 @@ public class MoSyncCameraController {
 		try
 		{
 			mCamera.stopPreview();
+			releaseCamera();
 		}
 		catch (Exception e)
 		{
@@ -432,6 +423,7 @@ public class MoSyncCameraController {
 		}
 		resourceIndex = placeHolder;
 
+		// mPreview.mCamera.cancelAutoFocus();
 		mPreview.mCamera.takePicture(null, rawCallback, jpegCallback);
 
 		lock.lock();
@@ -627,11 +619,16 @@ public class MoSyncCameraController {
 	 */
 	public void acquireCamera()
 	{
+		SYSLOG("acquireCamera");
 		if(mCamera == null)// && mPreview != null)
 		{
 			try
 			{
-				mCamera = Camera.open();
+				if (mNumCameras <= 1) {
+					mCamera = cameraOpen(0);
+				} else {
+					mCamera = cameraOpen(mCurrentCameraIndex);
+				}
 				//mPreview.mCamera = mCamera;
 			}
 			catch (RuntimeException re)
@@ -659,25 +656,31 @@ public class MoSyncCameraController {
     	{
 			Camera.Parameters parameters = getCurrentParameters();
 			List <Camera.Size> supportedSizes =  parameters.getSupportedPictureSizes();
-			Camera.Size optimalPictureSize = supportedSizes.get(formatIndex);
-			parameters.setPictureSize(optimalPictureSize.width,optimalPictureSize.height);
-			mCamera.setParameters(parameters);
+			try {
+				Camera.Size optimalPictureSize = supportedSizes
+						.get(formatIndex);
+				parameters.setPictureSize(optimalPictureSize.width,
+						optimalPictureSize.height);
+			} catch (IndexOutOfBoundsException e) {
+				SYSLOG("Size not supported " + formatIndex);
+			}
+			if (mCamera != null)
+				mCamera.setParameters(parameters);
     	}
     	catch (Exception e)
     	{
-    		SYSLOG("FAILED TO SET the PARAMETERS");
+			SYSLOG("FAILED TO SET the PARAMETERS " + e);
     	}
 	}
 
 	public int getPreviewSize()
 	{
+		SYSLOG("getPreviewSize");
 		acquireCamera();
 
 		Camera.Parameters parameters = getCurrentParameters();
 		Camera.Size size = parameters.getPreviewSize();
 
-		int width = ((size.width&0x0000ffff)<<16);
-		int height = (size.height&0x0000ffff);
 		int extent = EXTENT(size.width, size.height);
 
 		return extent;
@@ -751,8 +754,7 @@ public class MoSyncCameraController {
 				if(!mMoSyncPreviewAutoFocusEventEnabled)
 				{
 					// Return the buffer if in use
-					if(mIsUsingPreviewCallbackBuffer)
-						camera.addCallbackBuffer(data);
+					camera.addCallbackBuffer(data);
 
 					return;
 				}
@@ -760,8 +762,7 @@ public class MoSyncCameraController {
 				if(!mMoSyncPreviewHasFocus)
 				{
 					// Return the buffer if in use
-					if(mIsUsingPreviewCallbackBuffer)
-						camera.addCallbackBuffer(data);
+					camera.addCallbackBuffer(data);
 
 					return;
 				}
@@ -773,8 +774,7 @@ public class MoSyncCameraController {
 			if(!mSendEvent)
 			{
 				// Return the buffer if in use
-				if(mIsUsingPreviewCallbackBuffer)
-					camera.addCallbackBuffer(data);
+				camera.addCallbackBuffer(data);
 
 				return;
 			}
@@ -814,8 +814,7 @@ public class MoSyncCameraController {
 				lock.unlock();
 
 				// Return the buffer if in use
-				if(mIsUsingPreviewCallbackBuffer)
-					camera.addCallbackBuffer(data);
+				camera.addCallbackBuffer(data);
 			}
 		}
 	};
